# sdd-orchestrator

./: .coderabbit.yaml  .dockerignore  .gitignore  .mcp.json  AGENTS  CLAUDE.md  GEMINI.md  LICENSE  README.md  docker-compose.audio.yml  docker-compose.e2e.yml  docker-compose.langfuse.yml  docker-compose.runner.yml  docker-compose.yml  pyproject.toml  run_audio.sh  run_backend.sh  run_comfyui.sh  run_frontend.sh  run_tests.sh  sdd.config.yaml  test_product_flow.py  test_regex.py  test_simple.py  verify_qwen.py
audio/: Dockerfile  config.py  main.py  pyproject.toml  schemas.py
audio/services/: music_engine.py  sovits_process.py  text_preprocess.py  tts_engine.py  tts_postprocess.py
audio/tests/: test_endpoints.py  test_tts_postprocess.py
backend/: .env.example  .gitignore  Dockerfile.e2e  README.md  alembic.ini  analyze_storyboard_tts.py  apply_polishing_416.py  check_env.py  config.py  config_pipelines.py  config_prompt.py  database.py  debug_active_model.py  debug_db_status.py  debug_query_419.py  fix_db_duplicates.py  get_sb_416.py  get_tags_416.py  keywords.json  list_dbs.py  logic.py  main.py  migrate_loras.py  migrate_scenes_tts.py  pyproject.toml  reproduce_issue.py  schemas.py  schemas_creative.py  schemas_lab.py  set_minio_policy.py  test_full_layout.py  test_minio.py  test_render.py  trigger_demo_416.py  verify_qwen.py
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/constants/: __init__.py  layout.py  testing.py  transition.py
backend/models/: __init__.py  activity_log.py  associations.py  background.py  base.py  character.py  creative.py  evaluation.py  gemini_usage_log.py  generation_log.py  group.py  group_config.py  lab.py  lora.py  media_asset.py  music_preset.py  project.py  prompt_history.py  render_history.py  render_preset.py  scene.py  scene_quality.py  sd_model.py  story_card.py  storyboard.py  storyboard_character.py  tag.py  tag_alias.py  tag_filter.py  voice_preset.py  youtube_credential.py
backend/routers/: __init__.py  _scripts_sse.py  activity_logs.py  admin.py  analytics.py  assets.py  avatar.py  backgrounds.py  characters.py  cleanup.py  controlnet.py  creative.py  creative_presets.py  evaluation.py  generation_logs.py  groups.py  keywords.py  lab.py  loras.py  memory.py  music_presets.py  presets.py  preview.py  projects.py  prompt.py  prompt_histories.py  quality.py  render_presets.py  scene.py  scripts.py  sd.py  sd_models.py  settings.py  stage.py  story_cards.py  storyboard.py  style_profiles.py  tags.py  video.py  voice_presets.py  (+1 more)
backend/scripts/: add_chibi_alias.py  add_default_loras.py  add_identity_tags.py  add_location_conflict_rules.sql  analyze_character_quality.py  analyze_db_assets.py  analyze_pose_coverage.py  analyze_subcategory_impact.py  audit_id_consistency.py  audit_ip_adapter.py  audit_lora_cleanup.py  check_env.py  check_models_v2.py  check_single_tag.py  check_storage_keys.py  check_trigger_words.py  check_voice_match.py  clean_character_prompts.py  cleanup_garbage.py  cleanup_lora_aliases.py  cleanup_orphan_assets.py  cleanup_orphans.py  cleanup_reference_prompts.sql  create_conflict_test_data.py  create_conflict_test_data_sql.py  create_style_profiles.py  debug_active_model.py  debug_classification.py  debug_compose_filter.py  debug_conflict_rule.py  debug_filter.py  deep_analyze_poses.py  delete_tag.py  dump_char_voice_mapping.py  dump_chars_voices.py  dump_voice_details.py  enrich_lora_metadata.py  experiment_2p_ipadapter.py  experiment_2p_multipass.py  experiment_2p_multipass_v2.py  (+119 more)
backend/services/: __init__.py  _danbooru_sync.py  asset_service.py  audio_client.py  auto_regen.py  avatar.py  bgm_prebuild.py  character_action_resolver.py  character_consistency.py  cleanup.py  config_resolver.py  consistency.py  controlnet.py  creative_agents.py  creative_debate_agents.py  creative_engine.py  creative_leader.py  creative_material.py  creative_pipeline.py  creative_qc.py  creative_review.py  creative_shorts.py  creative_studio.py  creative_trace.py  creative_url.py  creative_utils.py  critical_failure.py  danbooru.py  error_responses.py  evaluation.py  gemini_imagen.py  generation.py  generation_context.py  generation_controlnet.py  generation_prompt.py  generation_style.py  identity_score.py  image.py  image_cache.py  image_gen_pipeline.py  (+38 more)
backend/templates/: create_storyboard.j2  create_storyboard_confession.j2  create_storyboard_dialogue.j2  create_storyboard_japanese_lesson.j2  create_storyboard_math_lesson.j2  create_storyboard_narrated.j2  optimize_prompt.j2  review_evaluate.j2  validate_image_tags.j2
backend/tests/: README.md  _analyze_lora_results.py  _emergency_lora_check.py  _experimental_dialogue_composite.py  _experimental_hug_composite.py  _experimental_lora_combination.py  _experimental_multi_character.py  _generate_generic_boy.py  conftest.py  test_agent_12a_bugfixes.py  test_agent_12b_dataflow_group1.py  test_agent_12b_dataflow_group2.py  test_agent_12b_dataflow_group3.py  test_agent_messages.py  test_agent_messaging.py  test_analyze_topic.py  test_asset_service.py  test_atmosphere_time_of_day.py  test_audio_client.py  test_auto_pin_calculation.py  test_auto_regen.py  test_autosave_image_preservation.py  test_avatar_service.py  test_backend_complete_store.py  test_backgrounds.py  test_bgm.py  test_bgm_auto_mode.py  test_bgm_prebuild.py  test_build_reference_prompt.py  test_candidates_format.py  test_candidates_persistence.py  test_casting_sync.py  test_character_action_resolver.py  test_character_consistency.py  test_character_context.py  test_checkpointer.py  test_cinematographer.py  test_cinematographer_competition.py  test_cinematographer_tags.py  test_cinematographer_team.py  (+240 more)
orchestrator/: .gitignore  __init__.py  __main__.py  agents.py  config.py  main.py  project_config.py  pyproject.toml  rules.py  slack_app_manifest.yaml  state.py
orchestrator/prompts/: designer.md  lead_agent.md
orchestrator/tests/: test_agents.py  test_backlog.py  test_design.py  test_github.py  test_github_extended.py  test_notify.py  test_project_config.py  test_rollback.py  (+8 more)
(+1875 files in other folders)
