[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdd-orchestrator"
version = "0.1.0"
description = "SDD (Spec-Driven Development) Orchestrator — autonomous AI task execution engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.0.20",
    "httpx>=0.27",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[project.scripts]
sdd-orchestrator = "sdd_orchestrator.main:cli_entry"
sdd = "sdd_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sdd_orchestrator"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
