[project]
name = "audio-server"
version = "0.1.0"
description = "TTS + MusicGen sidecar service for Shorts Producer"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "qwen-tts>=0.0.5",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "transformers>=4.40.0",
    "scipy>=1.12.0",
    "torch>=2.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]
