[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "edge-tts>=7.2.7",
    "fastapi>=0.128.0",
    "google-cloud-texttospeech>=2.33.0",
    "google-genai>=1.57.0",
    "gradio-client>=2.0.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
