[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "gradio-client>=2.0.3",
    "huggingface-hub>=0.23.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mediapipe>=0.10.14",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0.84",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.16.0",
    "huggingface-hub",
    "numpy",
    "ruff>=0.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "pytest-asyncio>=1.3.0",
    "pytest-order>=1.3.0",
    "pytest-html>=4.2.0",
    "boto3>=1.34.0",
    "qwen-tts>=0.0.5",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "cryptography>=42.0.0",
    "diffusers>=0.30.0",
    "torchsde>=0.2.6",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "scikit-image>=0.22.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call real external APIs (Gemini, etc.) — skipped by default",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "B008"] # Line too long, Depends in defaults

[tool.ruff.lint.isort]
known-first-party = ["logic", "schemas"]

[dependency-groups]
dev = [
    "pytest-testmon>=2.2.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.8.0",
]
