[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-producer-orchestrator"
version = "0.1.0"
description = "SDD Orchestrator for Shorts Producer"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
orchestrator = "orchestrator.main:cli_entry"

[tool.setuptools.packages.find]
where = [".."]
include = ["orchestrator*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
